[package]
name = "posix-errors"
version = "1.1.1"
authors = ["Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>"]
edition = "2018"
license = "Apache-2.0"
description = "Posix error codes and handy functions for using them."
repository = "https://github.com/kalkin/rust-posix-errors"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
