[package]
name = 'posix-errors'
authors = ['Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>']
categories = [ 'data-structures', 'rust-patterns', ]
description = 'Posix error codes and handy functions for using them.'
edition = '2021'
keywords = ['errors']
license = 'Apache-2.0'
repository = 'https://github.com/kalkin/rust-posix-errors'
version = '1.2.0'
